# creachangerv2

./: CMakeLists.txt  mingw-w64-x86_64.cmake
ImGui DirectX 11 Kiero Hook/: CCPlayerInventory.cpp  CCPlayerInventory.h  SchemaSystem.cpp  SchemaSystem.h  directx.h  draw.cpp  entity.h  events.cpp  fnv1a.h  hook_manager.cpp  i_event_manager.h  interfaces.cpp  inventory.cpp  inventory_p.cpp  logger.cpp  logger.h  main.cpp  pattern_scanner.cpp  pattern_scanner.h  pe64.h  schema.h  skins.cpp
ImGui DirectX 11 Kiero Hook/imgui/: imgui.cpp
ImGui DirectX 11 Kiero Hook/kiero/: kiero.cpp
